@@ -209,6 +209,7 @@ _UI_ConditionalNodeStyle_style_feature=Style
 _UI_FormDescription_pages_feature=Pages
 _UI_PageDescription_name_feature=Name
 _UI_PageDescription_labelExpression_feature=Label Expression
+_UI_PageDescription_domainType_feature=Domain Type
 _UI_PageDescription_semanticCandidatesExpression_feature=Semantic Candidates Expression
 _UI_PageDescription_preconditionExpression_feature=Precondition Expression
 _UI_PageDescription_groups_feature=Groups
