@@ -2889,13 +2889,21 @@ public interface ViewPackage extends EPackage {
     int PAGE_DESCRIPTION__LABEL_EXPRESSION = 1;
 
     /**
+     * The feature id for the '<em><b>Domain Type</b></em>' attribute. <!-- begin-user-doc --> <!-- end-user-doc -->
+     *
+     * @generated
+     * @ordered
+     */
+    int PAGE_DESCRIPTION__DOMAIN_TYPE = 2;
+
+    /**
      * The feature id for the '<em><b>Semantic Candidates Expression</b></em>' attribute. <!-- begin-user-doc --> <!--
      * end-user-doc -->
      *
      * @generated
      * @ordered
      */
-    int PAGE_DESCRIPTION__SEMANTIC_CANDIDATES_EXPRESSION = 2;
+    int PAGE_DESCRIPTION__SEMANTIC_CANDIDATES_EXPRESSION = 3;
 
     /**
      * The feature id for the '<em><b>Precondition Expression</b></em>' attribute. <!-- begin-user-doc --> <!--
@@ -2904,7 +2912,7 @@ public interface ViewPackage extends EPackage {
      * @generated
      * @ordered
      */
-    int PAGE_DESCRIPTION__PRECONDITION_EXPRESSION = 3;
+    int PAGE_DESCRIPTION__PRECONDITION_EXPRESSION = 4;
 
     /**
      * The feature id for the '<em><b>Groups</b></em>' containment reference list. <!-- begin-user-doc --> <!--
@@ -2913,7 +2921,7 @@ public interface ViewPackage extends EPackage {
      * @generated
      * @ordered
      */
-    int PAGE_DESCRIPTION__GROUPS = 4;
+    int PAGE_DESCRIPTION__GROUPS = 5;
 
     /**
      * The feature id for the '<em><b>Toolbar Actions</b></em>' containment reference list. <!-- begin-user-doc --> <!--
@@ -8090,6 +8098,18 @@ public interface ViewPackage extends EPackage {
 
     /**
      * Returns the meta object for the attribute
+     * '{@link org.eclipse.sirius.components.view.PageDescription#getDomainType <em>Domain Type</em>}'. <!--
+     * begin-user-doc --> <!-- end-user-doc -->
+     *
+     * @return the meta object for the attribute '<em>Domain Type</em>'.
+     * @generated
+     * @see org.eclipse.sirius.components.view.PageDescription#getDomainType()
+     * @see #getPageDescription()
+     */
+    EAttribute getPageDescription_DomainType();
+
+    /**
+     * Returns the meta object for the attribute
      * '{@link org.eclipse.sirius.components.view.PageDescription#getSemanticCandidatesExpression <em>Semantic
      * Candidates Expression</em>}'. <!-- begin-user-doc --> <!-- end-user-doc -->
      *
@@ -11112,6 +11132,14 @@ public interface ViewPackage extends EPackage {
          * @generated
          */
         EAttribute PAGE_DESCRIPTION__LABEL_EXPRESSION = eINSTANCE.getPageDescription_LabelExpression();
+
+        /**
+         * The meta object literal for the '<em><b>Domain Type</b></em>' attribute feature. <!-- begin-user-doc --> <!--
+         * end-user-doc -->
+         *
+         * @generated
+         */
+        EAttribute PAGE_DESCRIPTION__DOMAIN_TYPE = eINSTANCE.getPageDescription_DomainType();
 
         /**
          * The meta object literal for the '<em><b>Semantic Candidates Expression</b></em>' attribute feature. <!--
