@@ -74,31 +74,48 @@ public class PageDescriptionImpl extends MinimalEObjectImpl.Container implements
      * The default value of the '{@link #getLabelExpression() <em>Label Expression</em>}' attribute. <!-- begin-user-doc
      * --> <!-- end-user-doc -->
      *
-     * @see #getLabelExpression()
      * @generated
      * @ordered
+     * @see #getLabelExpression()
      */
     protected static final String LABEL_EXPRESSION_EDEFAULT = null;
 
     /**
-     * The cached value of the '{@link #getLabelExpression() <em>Label Expression</em>}' attribute. <!-- begin-user-doc
-     * --> <!-- end-user-doc -->
+     * The default value of the '{@link #getDomainType() <em>Domain Type</em>}' attribute. <!-- begin-user-doc --> <!--
+     * end-user-doc -->
      *
-     * @see #getLabelExpression()
      * @generated
      * @ordered
+     * @see #getDomainType()
      */
-    protected String labelExpression = LABEL_EXPRESSION_EDEFAULT;
-
+    protected static final String DOMAIN_TYPE_EDEFAULT = "";
     /**
      * The default value of the '{@link #getSemanticCandidatesExpression() <em>Semantic Candidates Expression</em>}'
      * attribute. <!-- begin-user-doc --> <!-- end-user-doc -->
      *
-     * @see #getSemanticCandidatesExpression()
      * @generated
      * @ordered
+     * @see #getSemanticCandidatesExpression()
      */
     protected static final String SEMANTIC_CANDIDATES_EXPRESSION_EDEFAULT = "aql:self";
+    /**
+     * The cached value of the '{@link #getLabelExpression() <em>Label Expression</em>}' attribute. <!-- begin-user-doc
+     * --> <!-- end-user-doc -->
+     *
+     * @generated
+     * @ordered
+     * @see #getLabelExpression()
+     */
+    protected String labelExpression = LABEL_EXPRESSION_EDEFAULT;
+    /**
+     * The cached value of the '{@link #getDomainType() <em>Domain Type</em>}' attribute. <!-- begin-user-doc --> <!--
+     * end-user-doc -->
+     *
+     * @generated
+     * @ordered
+     * @see #getDomainType()
+     */
+    protected String domainType = DOMAIN_TYPE_EDEFAULT;
 
     /**
      * The cached value of the '{@link #getSemanticCandidatesExpression() <em>Semantic Candidates Expression</em>}'
@@ -221,6 +238,29 @@ public class PageDescriptionImpl extends MinimalEObjectImpl.Container implements
      * @generated
      */
     @Override
+    public String getDomainType() {
+        return this.domainType;
+    }
+
+    /**
+     * <!-- begin-user-doc --> <!-- end-user-doc -->
+     *
+     * @generated
+     */
+    @Override
+    public void setDomainType(String newDomainType) {
+        String oldDomainType = this.domainType;
+        this.domainType = newDomainType;
+        if (this.eNotificationRequired())
+            this.eNotify(new ENotificationImpl(this, Notification.SET, ViewPackage.PAGE_DESCRIPTION__DOMAIN_TYPE, oldDomainType, this.domainType));
+    }
+
+    /**
+     * <!-- begin-user-doc --> <!-- end-user-doc -->
+     *
+     * @generated
+     */
+    @Override
     public String getSemanticCandidatesExpression() {
         return this.semanticCandidatesExpression;
     }
@@ -316,6 +356,8 @@ public class PageDescriptionImpl extends MinimalEObjectImpl.Container implements
                 return this.getName();
             case ViewPackage.PAGE_DESCRIPTION__LABEL_EXPRESSION:
                 return this.getLabelExpression();
+            case ViewPackage.PAGE_DESCRIPTION__DOMAIN_TYPE:
+                return this.getDomainType();
             case ViewPackage.PAGE_DESCRIPTION__SEMANTIC_CANDIDATES_EXPRESSION:
                 return this.getSemanticCandidatesExpression();
             case ViewPackage.PAGE_DESCRIPTION__PRECONDITION_EXPRESSION:
@@ -342,6 +384,9 @@ public class PageDescriptionImpl extends MinimalEObjectImpl.Container implements
                 return;
             case ViewPackage.PAGE_DESCRIPTION__LABEL_EXPRESSION:
                 this.setLabelExpression((String) newValue);
+                return;
+            case ViewPackage.PAGE_DESCRIPTION__DOMAIN_TYPE:
+                this.setDomainType((String) newValue);
                 return;
             case ViewPackage.PAGE_DESCRIPTION__SEMANTIC_CANDIDATES_EXPRESSION:
                 this.setSemanticCandidatesExpression((String) newValue);
@@ -375,6 +420,9 @@ public class PageDescriptionImpl extends MinimalEObjectImpl.Container implements
             case ViewPackage.PAGE_DESCRIPTION__LABEL_EXPRESSION:
                 this.setLabelExpression(LABEL_EXPRESSION_EDEFAULT);
                 return;
+            case ViewPackage.PAGE_DESCRIPTION__DOMAIN_TYPE:
+                this.setDomainType(DOMAIN_TYPE_EDEFAULT);
+                return;
             case ViewPackage.PAGE_DESCRIPTION__SEMANTIC_CANDIDATES_EXPRESSION:
                 this.setSemanticCandidatesExpression(SEMANTIC_CANDIDATES_EXPRESSION_EDEFAULT);
                 return;
@@ -403,6 +451,8 @@ public class PageDescriptionImpl extends MinimalEObjectImpl.Container implements
                 return NAME_EDEFAULT == null ? this.name != null : !NAME_EDEFAULT.equals(this.name);
             case ViewPackage.PAGE_DESCRIPTION__LABEL_EXPRESSION:
                 return LABEL_EXPRESSION_EDEFAULT == null ? this.labelExpression != null : !LABEL_EXPRESSION_EDEFAULT.equals(this.labelExpression);
+            case ViewPackage.PAGE_DESCRIPTION__DOMAIN_TYPE:
+                return DOMAIN_TYPE_EDEFAULT == null ? this.domainType != null : !DOMAIN_TYPE_EDEFAULT.equals(this.domainType);
             case ViewPackage.PAGE_DESCRIPTION__SEMANTIC_CANDIDATES_EXPRESSION:
                 return SEMANTIC_CANDIDATES_EXPRESSION_EDEFAULT == null ? this.semanticCandidatesExpression != null : !SEMANTIC_CANDIDATES_EXPRESSION_EDEFAULT.equals(this.semanticCandidatesExpression);
             case ViewPackage.PAGE_DESCRIPTION__PRECONDITION_EXPRESSION:
@@ -430,6 +480,8 @@ public class PageDescriptionImpl extends MinimalEObjectImpl.Container implements
         result.append(this.name);
         result.append(", labelExpression: ");
         result.append(this.labelExpression);
+        result.append(", domainType: ");
+        result.append(this.domainType);
         result.append(", semanticCandidatesExpression: ");
         result.append(this.semanticCandidatesExpression);
         result.append(", preconditionExpression: ");
